# suisai-server

./: .gitignore  Cargo.toml  README.md  example.env  nuke_data.sql
migrations/2025-03-18-063954_create_photos/: down.sql  up.sql
migrations/2025-03-18-092355_create_albums/: down.sql  up.sql
migrations/2025-11-14-103136-0000_init/: down.sql  up.sql
src/: cli.rs  main.rs  models.rs  preflight.rs  schema.rs  server.rs
src/_utils/: json_map.rs  mod.rs  msg.rs  path_prefix.rs  rocket_err.rs  run_command.rs  unwrap_or_return.rs  unwrap_ret.rs
src/db/: mod.rs  models.rs  schema.rs
src/db/dao/: photo.rs
src/db/models/: album.rs  db_album.rs  mod.rs  photo.rs
src/db/operations/: album.rs  album_photo_join.rs  album_query.rs  join_album_album.rs  join_album_photo.rs  join_photo_album.rs  mod.rs  paths.rs  photo.rs  query.rs  thumbnail.rs
src/endpoints/: album.rs  album_photo_join.rs  album_query.rs  join_photo_album.rs  macros.rs  main.rs  management.rs  meow.rs  mod.rs  photo.rs  thumbnail.rs
src/fs_operations/: album.rs  mod.rs  photo.rs
src/ingest/: extract_thumbnail.rs  get_image_paths.rs  get_images.rs  get_img.rs  get_img_paths.rs  ingest.rs  main.rs  mod.rs  trait_suisai_image.rs  trait_suisai_image_path.rs
src/models/: album.rs  join.rs  mod.rs  photo.rs  photo_api.rs  photo_http_api.rs
src/models/db/: mod.rs  thumbnail.rs
src/models/webapi/: album.rs  photo.rs
src/virtfs/: attribute_cache.rs  fileattr_cache.rs  filesystem.rs  fs_struct.rs  fuser.rs  inode.rs  inode_tree.rs  main.rs  mod.rs  virtfs.rs  virtfs_fuse_impl.rs  virtfs_structs.rs
src/webserver/: album.rs  album_query.rs  main.rs  mod.rs  photo.rs
