[package]
name = "suisai-server"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.8", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
chrono = { version = "0.4.40", features = ["serde"] }
rocket = { version = "0.5.1", features = ["json"] }
lazy_static = "1.5.0"
anyhow = "1.0.97"
serde = "1.0.219"
clap = { version = "4.5.32", features = ["derive"] }
rocket_cors = "0.6.0"
infer = "0.19.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
