[package]
name = "suisai-server"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.2", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
chrono = { version = "0.4.42", features = ["serde"] }
rocket = { version = "0.5.1", features = ["json"] }
anyhow = "1.0.100"
serde = "1.0.226"
clap = { version = "4.5.48", features = ["derive"] }
rocket_cors = "0.6.0"
infer = "0.19.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
Inflector = { version = "0.11.4", default-features = false }
fuser = "0.16.0"
libc = "0.2.176"
lru = { version = "0.16.1", default-features = false }
