[package]
name = "suisai-server"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.3", features = ["mysql", "r2d2", "chrono"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
chrono = { version = "0.4.42", features = ["serde"] }
rocket = { version = "0.5.1", features = ["json"] }
anyhow = "1.0.100"
serde = "1.0.228"
clap = { version = "4.5.51", features = ["derive"] }
rocket_cors = "0.6.0"
infer = "0.19.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
Inflector = { version = "0.11.4", default-features = false }
serde_json = "1.0.145"
